# georectify

./: .gitignore  Dockerfile  README.md
cpp/: CMakeLists.txt  Dockerfile
cpp/src/: CMakeLists.txt  handler.cpp  handler.h  listener.cpp  listener.h  main.cpp  session.cpp  session.h  util.h
data/: sample.tif  sample_post.json
python/: Dockerfile
python/resources/: process.py
resources/: service.py
